--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,6 +1,8 @@
-requests~=2.32.3
-fastapi~=0.111.0
-jinja2~=3.1.4
-redis~=5.0.8
+requests==2.32.3
+fastapi==0.112.4
+uvicorn
+pydantic==2.8.0
+jinja2==3.1.4
+redis==5.0.8
 nbt
-aiofiles~=24.1.0
+aiofiles==24.1.0
